Avoid center aligning labels

--- a/src/views/CardAddModal.scss
+++ b/src/views/CardAddModal.scss
@@ -5,9 +5,6 @@
 }
 
 .CardAddModal-ControlLabel {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   font-weight: bold;
 }
 
